<resources>
    <string name="app_name">SimOne</string>
    <string name="logo_description">Launcher activity logo</string>
    <string name="app_slogan">You\'ll never forget to call…</string>
    <string name="get_started">Get Started</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search Contacts</string>
    <string name="today_fragment_title">Today\'s Calls</string>
    <string name="reminder_fragment_title">Manage Reminders</string>
    <string name="group_fragment_title">Manage Groups</string>
    <string name="call_action">Call action</string>
    <string name="delete_action">Delete action</string>
    <string name="add_action">Add action</string>
    <string name="some_calls_coming_up">Some calls coming up</string>
    <string name="today_fragment_icon">Today Fragment Icon</string>
    <string name="reminder_fragment_icon">Reminder Fragment Icon</string>
    <string name="group_fragment_icon">Group Fragment Icon</string>
    <string name="contact_search_title">Search results for \"%1s\"</string>
    <string name="add_reminder_fragment_title">Set Reminder for %1s</string>
    <string name="update_reminder_fragment_title">Update Reminder for %1s</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="enter_interval">Enter interval</string>
    <string name="interval_prompt">Enter interval</string>
    <string name="group_prompt">Select Group</string>
    <string name="interval_hint">Interval</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="add_reminder_error">Enter an interval value or add to a group</string>
    <string name="add_reminder_success_toast">Reminder for %1s has been set</string>
    <string name="new_group_title">Add a new group</string>
    <string name="name">Name</string>
    <string name="txt_update">Update</string>
    <string name="update_reminder_success">Reminder updated successfully</string>
    <string name="status_badge"><![CDATA[<big>%1$d</big><br/><small>%2$s</small>]]></string>
    <string name="reminder_deleted_message">Reminder deleted successfully</string>
    <string name="delete_confirmation">Do you want to delete %1s?</string>

    <string-array name="bottomNavMenu">
        <item>Today</item>
        <item>Reminders</item>
        <item>Groups</item>
    </string-array>
    <string-array name="pageTitles">
        <item>@string/today_fragment_title</item>
        <item>@string/reminder_fragment_title</item>
        <item>@string/group_fragment_title</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
