<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/contactLetterTextView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/group_badge"
            android:gravity="center"
            android:lineSpacingExtra="-3dp"
            android:text="A"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/contactNameTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Shakira"
            android:textColor="@color/defaultTextColour"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/addIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/add_action"
            android:padding="10dp"
            android:src="@drawable/ic_add_circle_outline_blue" />

    </LinearLayout>
</layout>
